--- a/src/dk/javahandson/gui/view/CreateEventMenu.fxml
+++ b/src/dk/javahandson/gui/view/CreateEventMenu.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="createEventAnchorPane" prefHeight="450.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
+<AnchorPane fx:id="createEventAnchorPane" prefHeight="450.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
    <children>
       <ScrollPane prefHeight="451.0" prefWidth="520.0">
         <content>
@@ -24,35 +29,41 @@
                   <Label layoutX="29.0" layoutY="215.0" text="Notes:" />
                   <TextField fx:id="txtFieldNotes" layoutX="25.0" layoutY="233.0" prefHeight="79.0" prefWidth="217.0" />
                   <TextField fx:id="txtFieldDateEnd" layoutX="201.0" layoutY="175.0" prefHeight="25.0" prefWidth="90.0" promptText="YYYY-MM-DD" />
-                  <Label layoutX="327.0" layoutY="357.0" text="Add ticket..." />
-                  <Button layoutX="296.0" layoutY="353.0" mnemonicParsing="false" onAction="#clickAddTicket" text="+" />
-                  <HBox layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="266.0">
+                  <HBox alignment="TOP_CENTER" layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="408.0">
                      <children>
-                        <VBox prefHeight="46.0" prefWidth="155.0">
+                        <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
                            <children>
-                              <Label text="Ticket Type" />
-                              <TextField fx:id="txtFieldTicketType" prefHeight="25.0" prefWidth="185.0" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="46.0" prefWidth="0.0" />
-                        <VBox prefHeight="46.0" prefWidth="111.0">
-                           <children>
-                              <Label text="Amount">
+                              <Label prefHeight="18.0" prefWidth="161.0" text="Maximum amount of tickets">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin></Label>
-                              <TextField fx:id="txtFieldAmount" prefHeight="26.0" prefWidth="116.0">
+                              <TextField fx:id="txtFieldMaxTickets" prefHeight="30.0" prefWidth="150.0">
                                  <VBox.margin>
-                                    <Insets left="10.0" />
+                                    <Insets left="10.0" right="10.0" />
                                  </VBox.margin></TextField>
                            </children>
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
+                           <children>
+                              <Label text="Maximum amount of vouchers" />
+                              <TextField fx:id="txtFieldMaxVouchers" prefHeight="30.0" prefWidth="179.0">
+                                 <VBox.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
                         </VBox>
                      </children>
                   </HBox>
                   <Button layoutX="288.0" layoutY="555.0" mnemonicParsing="false" onAction="#clickSave" text="Save" />
                   <Button layoutX="332.0" layoutY="555.0" mnemonicParsing="false" onAction="#clickCancel" text="Cancel" />
                   <Label fx:id="lblWarning" layoutX="260.0" layoutY="295.0" prefHeight="17.0" prefWidth="217.0" />
-                  <ListView fx:id="listViewTickets" editable="true" layoutX="23.0" layoutY="390.0" prefHeight="141.0" prefWidth="440.0" />
                </children>
             </AnchorPane>
         </content>
