--- a/src/dk/javahandson/gui/view/CreateEventMenu.fxml
+++ b/src/dk/javahandson/gui/view/CreateEventMenu.fxml
@@ -4,83 +4,75 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane fx:id="createEventAnchorPane" prefHeight="450.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
+<AnchorPane fx:id="createEventAnchorPane" prefHeight="434.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
 
    <children>
-      <ScrollPane prefHeight="451.0" prefWidth="520.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="607.0" prefWidth="497.0" styleClass="backgroundMenu" stylesheets="@Menu.css">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="439.0" prefWidth="520.0" styleClass="backgroundMenu" stylesheets="@Menu.css">
+         <children>
+
+
+            <Label layoutX="17.0" layoutY="30.0" text="Event Title:" textFill="WHITE" />
+            <TextField fx:id="txtFieldEventTitle" layoutX="18.0" layoutY="47.0" prefHeight="25.0" prefWidth="309.0" />
+            <Label layoutX="22.0" layoutY="85.0" text="Location:" textFill="WHITE" />
+            <TextField fx:id="txtFieldLocation" layoutX="21.0" layoutY="102.0" prefHeight="25.0" prefWidth="304.0" />
+            <Label layoutX="25.0" layoutY="160.0" text="Date Start:" textFill="WHITE" />
+            <Label layoutX="144.0" layoutY="160.0" text="Time Start:" textFill="WHITE" />
+            <Label layoutX="354.0" layoutY="160.0" text="Time End:" textFill="WHITE" />
+            <Label layoutX="234.0" layoutY="160.0" text="Date End:" textFill="WHITE" />
+            <Label layoutX="29.0" layoutY="215.0" text="Notes:" textFill="WHITE" />
+
+            <TextField fx:id="txtFieldNotes" layoutX="25.0" layoutY="233.0" prefHeight="79.0" prefWidth="217.0" />
+            <HBox alignment="TOP_CENTER" layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="446.0" />
+            <HBox layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="328.0">
                <children>
-
-
-                  <Label layoutX="17.0" layoutY="30.0" text="Event Title:" />
-                  <TextField fx:id="txtFieldEventTitle" layoutX="18.0" layoutY="47.0" prefHeight="25.0" prefWidth="309.0" />
-                  <Label layoutX="22.0" layoutY="85.0" text="Location:" />
-                  <TextField fx:id="txtFieldLocation" layoutX="21.0" layoutY="102.0" prefHeight="25.0" prefWidth="304.0" />
-                  <Label layoutX="25.0" layoutY="160.0" text="Date Start:" />
-                  <Label layoutX="144.0" layoutY="160.0" text="Time Start:" />
-                  <Label layoutX="354.0" layoutY="160.0" text="Time End:" />
-                  <Label layoutX="234.0" layoutY="160.0" text="Date End:" />
-                  <Label layoutX="29.0" layoutY="215.0" text="Notes:" />
-
-                  <TextField fx:id="txtFieldNotes" layoutX="25.0" layoutY="233.0" prefHeight="79.0" prefWidth="217.0" />
-                  <HBox alignment="TOP_CENTER" layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="408.0" />
-                  <Label layoutX="327.0" layoutY="357.0" text="Add ticket..." />
-                  <HBox layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="266.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
-                           <children>
-                              <Label prefHeight="18.0" prefWidth="161.0" text="Maximum amount of tickets" textFill="WHITE">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin></Label>
-                              <TextField fx:id="txtFieldMaxTickets" prefHeight="30.0" prefWidth="150.0">
-                                 <VBox.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </VBox.margin></TextField>
-                           </children>
-                           <HBox.margin>
+                        <Label prefHeight="18.0" prefWidth="161.0" text="Total amount of tickets" textFill="WHITE">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="txtFieldMaxTickets" prefHeight="30.0" prefWidth="150.0">
+                           <VBox.margin>
                               <Insets left="10.0" right="10.0" />
-                           </HBox.margin>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
-                           <children>
-                              <Label text="Maximum amount of vouchers" textFill="WHITE" />
-                              <TextField fx:id="txtFieldMaxVouchers" prefHeight="30.0" prefWidth="179.0">
-                                 <VBox.margin>
-                                    <Insets left="10.0" right="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                           </children>
-                           <HBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </HBox.margin>
-                        </VBox>
+                           </VBox.margin>
+                        </TextField>
                      </children>
-                  </HBox>
-                  <Button layoutX="288.0" layoutY="555.0" mnemonicParsing="false" onAction="#clickSave" styleClass="buttonSmall" stylesheets="@Menu.css" text="Save" />
-                  <Button layoutX="332.0" layoutY="555.0" mnemonicParsing="false" onAction="#clickCancel" styleClass="buttonSmall" stylesheets="@Menu.css" text="Cancel" />
-                  <Label fx:id="lblWarning" layoutX="260.0" layoutY="295.0" prefHeight="17.0" prefWidth="217.0" />
-
-                  <DatePicker fx:id="datePickerStart" editable="false" layoutX="24.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
-                  <DatePicker fx:id="datePickerEnd" editable="false" layoutX="232.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
-                  <ListView fx:id="listViewTickets" editable="true" layoutX="23.0" layoutY="390.0" prefHeight="141.0" prefWidth="440.0" />
-                  <TextField fx:id="txtFieldTimeEnd" layoutX="352.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
-                  <TextField fx:id="txtFieldTimeStart" layoutX="145.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
-                  <Label fx:id="lblTime" layoutX="251.0" layoutY="142.0" prefHeight="17.0" prefWidth="156.0" />
-                  <Label fx:id="lblDate" layoutX="23.0" layoutY="142.0" prefHeight="17.0" prefWidth="210.0" />
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Total amount of vouchers" textFill="WHITE" />
+                        <TextField fx:id="txtFieldMaxVouchers" prefHeight="30.0" prefWidth="179.0">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                  </VBox>
                </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+            </HBox>
+            <Button layoutX="355.0" layoutY="390.0" mnemonicParsing="false" onAction="#clickSave" styleClass="buttonSmall" stylesheets="@Menu.css" text="Save" />
+            <Button layoutX="416.0" layoutY="390.0" mnemonicParsing="false" onAction="#clickCancel" styleClass="buttonSmall" stylesheets="@Menu.css" text="Cancel" />
+            <Label fx:id="lblWarning" layoutX="260.0" layoutY="295.0" prefHeight="17.0" prefWidth="217.0" textFill="WHITE" />
+
+            <DatePicker fx:id="datePickerStart" editable="false" layoutX="24.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
+            <DatePicker fx:id="datePickerEnd" editable="false" layoutX="232.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
+            <TextField fx:id="txtFieldTimeEnd" layoutX="352.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
+            <TextField fx:id="txtFieldTimeStart" layoutX="145.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
+            <Label fx:id="lblTime" layoutX="251.0" layoutY="142.0" prefHeight="17.0" prefWidth="156.0" textFill="WHITE" />
+            <Label fx:id="lblDate" layoutX="23.0" layoutY="142.0" prefHeight="17.0" prefWidth="210.0" textFill="WHITE" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
