--- a/src/dk/javahandson/gui/view/CreateEventMenu.fxml
+++ b/src/dk/javahandson/gui/view/CreateEventMenu.fxml
@@ -4,75 +4,216 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="createEventAnchorPane" prefHeight="434.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
+<AnchorPane fx:id="createEventAnchorPane" prefHeight="434.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.javahandson.gui.controller.CreateEventController">
 
    <children>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="439.0" prefWidth="520.0" styleClass="backgroundMenu" stylesheets="@Menu.css">
          <children>
-
-
-            <Label layoutX="17.0" layoutY="30.0" text="Event Title:" textFill="WHITE" />
-            <TextField fx:id="txtFieldEventTitle" layoutX="18.0" layoutY="47.0" prefHeight="25.0" prefWidth="309.0" />
-            <Label layoutX="22.0" layoutY="85.0" text="Location:" textFill="WHITE" />
-            <TextField fx:id="txtFieldLocation" layoutX="21.0" layoutY="102.0" prefHeight="25.0" prefWidth="304.0" />
-            <Label layoutX="25.0" layoutY="160.0" text="Date Start:" textFill="WHITE" />
-            <Label layoutX="144.0" layoutY="160.0" text="Time Start:" textFill="WHITE" />
-            <Label layoutX="354.0" layoutY="160.0" text="Time End:" textFill="WHITE" />
-            <Label layoutX="234.0" layoutY="160.0" text="Date End:" textFill="WHITE" />
-            <Label layoutX="29.0" layoutY="215.0" text="Notes:" textFill="WHITE" />
-
-            <TextField fx:id="txtFieldNotes" layoutX="25.0" layoutY="233.0" prefHeight="67.0" prefWidth="217.0" />
-            <HBox alignment="TOP_CENTER" layoutX="19.0" layoutY="344.0" prefHeight="46.0" prefWidth="446.0" />
-            <HBox layoutX="23.0" layoutY="333.0" prefHeight="46.0" prefWidth="328.0">
+            <VBox prefHeight="439.0" prefWidth="520.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
+                  <VBox prefHeight="55.0" prefWidth="510.0">
                      <children>
-                        <Label prefHeight="18.0" prefWidth="161.0" text="Total amount of tickets" textFill="WHITE">
-                           <VBox.margin>
-                              <Insets left="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextField fx:id="txtFieldMaxTickets" prefHeight="30.0" prefWidth="150.0">
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </VBox.margin>
-                        </TextField>
+            
+            
+                        <Label text="Event Title:" textFill="WHITE" />
+                        <TextField fx:id="txtFieldEventTitle" prefHeight="25.0" prefWidth="309.0" />
                      </children>
-                     <HBox.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </HBox.margin>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="46.0" prefWidth="200.0">
+                  <VBox prefHeight="59.0" prefWidth="510.0">
                      <children>
-                        <Label text="Total amount of vouchers" textFill="WHITE" />
-                        <TextField fx:id="txtFieldMaxVouchers" prefHeight="30.0" prefWidth="179.0">
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </VBox.margin>
-                        </TextField>
+                        <Label text="Location:" textFill="WHITE" />
+                        <TextField fx:id="txtFieldLocation" prefHeight="2.0" prefWidth="520.0" />
                      </children>
-                     <HBox.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </HBox.margin>
+                  </VBox>
+                  <HBox prefHeight="67.0" prefWidth="510.0">
+                     <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Date Start:" textFill="WHITE" />
+                  
+                              <DatePicker fx:id="datePickerStart" editable="false" prefHeight="25.0" prefWidth="112.0" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Time Start:" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="txtFieldTimeStart" prefHeight="25.0" prefWidth="55.0">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Date End:" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <DatePicker fx:id="datePickerEnd" editable="false" prefHeight="25.0" prefWidth="112.0">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </DatePicker>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Time End:" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="txtFieldTimeEnd" prefHeight="25.0" prefWidth="55.0">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <VBox prefHeight="111.0" prefWidth="510.0">
+                     <children>
+                        <Label text="Notes:" textFill="WHITE" />
+            
+                        <TextField fx:id="txtFieldNotes" prefHeight="67.0" prefWidth="217.0" />
+                     </children>
+                  </VBox>
+                  <HBox prefHeight="46.0" prefWidth="200.0">
+                     <children>
+                        <VBox alignment="TOP_CENTER" prefHeight="43.0" prefWidth="143.0">
+                           <children>
+                              <Label text="Total amount of tickets" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="txtFieldMaxTickets">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="43.0" prefWidth="165.0">
+                           <children>
+                              <Label text="Add ticket type" textFill="WHITE" />
+                              <HBox prefHeight="26.0" prefWidth="160.0">
+                                 <children>
+                                    <TextField fx:id="textFieldTicketType" />
+                                    <Button mnemonicParsing="false" onAction="#addTicketType" styleClass="buttonSmall" stylesheets="@Menu.css" text="+" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets left="2.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="43.0" prefWidth="162.0">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                           <children>
+                              <ListView fx:id="listViewTicketType" prefHeight="43.0" prefWidth="174.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox prefHeight="56.0" prefWidth="510.0">
+                     <children>
+                        <VBox prefHeight="46.0" prefWidth="140.0">
+                           <children>
+                              <Label text="Total amount of vouchers" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="txtFieldMaxVouchers" prefHeight="25.0" prefWidth="76.0">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="43.0" prefWidth="168.0">
+                           <children>
+                              <Label text="Add voucher type" textFill="WHITE" />
+                              <HBox prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <TextField fx:id="textFieldVoucherType" />
+                                    <Button mnemonicParsing="false" onAction="#addVoucherType" styleClass="buttonSmall" stylesheets="@Menu.css" text="+" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets left="2.0" />
+                                 </VBox.margin>
+                              </HBox>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="43.0" prefWidth="162.0">
+                           <children>
+                              <ListView fx:id="listViewVoucherType" prefHeight="43.0" prefWidth="159.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#clickSave" styleClass="buttonSmall" stylesheets="@Menu.css" text="Save" />
+                        <Button mnemonicParsing="false" onAction="#clickCancel" styleClass="buttonSmall" stylesheets="@Menu.css" text="Cancel" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <VBox prefHeight="105.0" prefWidth="510.0">
+                     <children>
+                        <Label fx:id="lblDate" prefHeight="17.0" prefWidth="210.0" textFill="WHITE" />
+                        <Label fx:id="lblTime" prefHeight="17.0" prefWidth="156.0" textFill="WHITE" />
+                        <Label fx:id="lblSuccess" prefHeight="17.0" prefWidth="232.0" textFill="WHITE" />
+                        <Label fx:id="lblWarning" prefHeight="17.0" prefWidth="217.0" textFill="WHITE" />
+                     </children>
                   </VBox>
                </children>
-            </HBox>
-            <Button layoutX="355.0" layoutY="390.0" mnemonicParsing="false" onAction="#clickSave" styleClass="buttonSmall" stylesheets="@Menu.css" text="Save" />
-            <Button layoutX="416.0" layoutY="390.0" mnemonicParsing="false" onAction="#clickCancel" styleClass="buttonSmall" stylesheets="@Menu.css" text="Cancel" />
-            <Label fx:id="lblWarning" layoutX="46.0" layoutY="307.0" prefHeight="17.0" prefWidth="217.0" textFill="WHITE" />
-
-            <DatePicker fx:id="datePickerStart" editable="false" layoutX="24.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
-            <DatePicker fx:id="datePickerEnd" editable="false" layoutX="232.0" layoutY="175.0" prefHeight="25.0" prefWidth="112.0" />
-            <TextField fx:id="txtFieldTimeEnd" layoutX="352.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
-            <TextField fx:id="txtFieldTimeStart" layoutX="145.0" layoutY="175.0" prefHeight="25.0" prefWidth="55.0" />
-            <Label fx:id="lblTime" layoutX="251.0" layoutY="142.0" prefHeight="17.0" prefWidth="156.0" textFill="WHITE" />
-            <Label fx:id="lblDate" layoutX="23.0" layoutY="142.0" prefHeight="17.0" prefWidth="210.0" textFill="WHITE" />
-            <Label fx:id="lblSuccess" layoutX="263.0" layoutY="283.0" prefHeight="17.0" prefWidth="232.0" textFill="WHITE" />
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </VBox>
          </children>
       </AnchorPane>
    </children>
